# Aura-gold-minic

./: .dockerignore  .gitignore  README.md  analysis_options.yaml  pubspec.yaml
backend/: .dockerignore  .env  .env.example  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_investment_foundation.py  0003_remove_phase2_mock_defaults.py  0004_gold_treasury.py  7ffa80359775_fix_audit_logs_columns.py  91283168432c_add_remaining_quantity_to_orders.py  a737859ef435_create_trading_tables.py  e6164fefc93b_apply_audit_fixes.py  e906f3e0ff0c_create_initial_schema.py  f1a2b3c4d5e6_sprint_26_notifications_profile.py  g2b3c4d5e6f7_prod_hardening.py  h3c4d5e6f7g8_create_customers_table.py  i4d5e6f7g8h9_customer_hardening.py  j5e6f7g8h9i0_create_inventory_module.py  k6f7g8h9i0j1_inventory_hardening.py  l7g8h9i0j1k2_create_transactions_module.py  n9i0j1k2l3m4_add_user_kyc_status.py  o0p1q2r3s4t5_add_kyc_identity_fields.py  p1q2r3s4t5u6_add_kyc_profile.py  q2r3s4t5u6v7_add_metal_holdings_and_payments.py  r3s4t5u6v7w8_add_user_mobile_and_signup_otp.py  (+6 more)
backend/app/: main.py  seed.py
backend/app/api/: audit.py  (+16 more)
backend/aura_gold_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: build_railway_env.ps1  debug_kyc.py  fix_kyc_profiles.py  show_metal_prices.py  test_kyc_endpoints.py
backend/tests/: conftest.py  test_api.py  test_health.py  test_investment_foundation.py  test_models.py  test_permissions.py  test_trading.py
(+476 files in other folders)
